log
mi., 16 de mar. de 2022 23:45:33: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
800a208
ju., 17 de mar. de 2022  0:02:09: 
 list.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
428673b
ju., 17 de mar. de 2022  0:06:40: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
75f11ec
